--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev":"vite",
+    "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-slideshow-image": "^4.3.1",
+    "swiper": "^11.1.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
